[fix] fix CSS collapsing

--- a/src/components/UI/SideBarSection.css
+++ b/src/components/UI/SideBarSection.css
@@ -48,7 +48,7 @@
 }
 
 .sidebar-section-options.open {
-  max-height: 200px;
+  max-height: 500px; 
 }
 
 .sidebar-option {
